--- a/templates/rules/list.html
+++ b/templates/rules/list.html
@@ -4,6 +4,8 @@
 {% block title %}{% trans "Rules" %}{% endblock title %}
 {% block main %}
   {{ block.super }}
+
+  <div class="bg-white">
   <ol type="1">
     {% for rule in object_list %}
       <li>{{ rule }}</li>
@@ -15,4 +17,5 @@
       {% trans 'Accept site rules' %}
     </a>
   {% endif %}
+  </div>
 {% endblock main %}
