--- a/templates/_countries.html
+++ b/templates/_countries.html
@@ -1,10 +1,10 @@
 {% load i18n %}
 
-<div class="dropdown">
-  <button class="btn btn-link dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-    {% trans 'Countries' %}
-  </button>
+<button class="dropdown-toggle bg-white border-0 d-flex align-items-center" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="width: 1037px; padding: 0 0 0 69px; margin: 0 16px 16px;height: 45px">
+  {% trans 'Countries' %}
+</button>
 
+<div class="dropdown">
   <div class="dropdown-menu">
     {% for country in countries %}
       {% url url_name country_id=country.id as country_url %}
