--- a/templates/_messages.html
+++ b/templates/_messages.html
@@ -1,10 +1,5 @@
-{% if messages %}
-  <div class="container mt-3 position-fixed fixed-top" style="z-index: 1100">
-    {% for message in messages %}
-      <div class="alert alert-dismissible {% if message.tags %}alert-{{ message.tags }}{% endif %}" role="alert">
-        {{ message }}
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-    {% endfor %}
+{% for message in messages %}
+  <div class="alert bg-white" style="line-height: 38px; margin: 0 16px 16px;" role="alert">
+    {{ message }}
   </div>
-{% endif %}
+{% endfor %}
