--- a/templates/answers/_answer.html
+++ b/templates/answers/_answer.html
@@ -1,11 +1,16 @@
+{% load static %}
 {% load i18n %}
-{% include 'users/_avatar.html' with user=answer.author %}
+
+<div class="d-flex align-items-center">
+  {% include 'users/_avatar.html' with user=answer.author %}
+  <span style="margin-left: 19px">{{ answer.author.username }}</span>
+</div>
 
 {% if answer.question.status == 'closed' %}
-  <i class="bi bi-hand-thumbs-up ms-3"></i>{{ answer.likes|length }} {% trans 'Likes' %}
-  <i class="bi bi-hand-thumbs-down ms-3"></i>{{ answer.dislikes|length }} {% trans 'Dislikes' %}
+  <img height="33" alt="like" src="{% static 'icons/like.png' %}" class="ms-3" /> {% trans 'Likes' %}
+  <img height="33" alt="dislike" src="{% static 'icons/dislike.png' %}" class="ms-3" /> {{ answer.dislikes|length }} {% trans 'Dislikes' %}
 {% endif %}
 
 {% if answer.question.status in 'answered closed'|split %}
-  <i class="bi bi-eye ms-3 me-1"></i>{{ answer.views|length }} {% trans 'Views' %}
+  <img height="33" alt="views" src="{% static 'icons/eye.png' %}" /> {{ answer.views|length }} {% trans 'Views' %}
 {% endif %}
