--- a/templates/answers/create.html
+++ b/templates/answers/create.html
@@ -3,10 +3,13 @@
 {% load crispy_forms_tags %}
 
 {% block title %}{% trans "Create answer" %}{% endblock title %}
-{% block main %}
+{% block beforemain %}
   {{ block.super }}
   {% include '_countries.html' with url_name='answers:index' %}
-  <form method="POST" action="{% url 'answers:create' country_id=request.resolver_match.kwargs.country_id question_id=request.resolver_match.kwargs.question_id %}">
+{% endblock beforemain %}
+{% block main %}
+  {{ block.super }}
+  <form method="POST" class="bg-white" action="{% url 'answers:create' country_id=request.resolver_match.kwargs.country_id question_id=request.resolver_match.kwargs.question_id %}">
     {% csrf_token %}
     {{ form|crispy }}
     <input type="submit" class="btn btn-primary" value="{% trans 'Create answer' %}">
