--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,7 +18,7 @@
       <link rel="preconnect" href="https://fonts.gstatic.com">
 
       {% block style %}
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
         <link rel="stylesheet" href="{% static 'styles.css' %}">
       {% endblock style %}
@@ -33,30 +33,28 @@
         {% endblock header %}
       </header>
 
-      <div class="container" style="padding-top: 5rem">
-        <div class="row gx-5">
-          <div class="col-3">
-            <aside class="bg-white">
-              {% block sidebar %}
-                {% include "_sidebar.html" %}
-              {% endblock sidebar %}
-            </aside>
-          </div>
+      <div style="padding-top: 83px" class="d-flex h-100">
+        <aside class="bg-white h-100" style="width: 316px">
+          {% block sidebar %}
+            {% include "_sidebar.html" %}
+          {% endblock sidebar %}
+        </aside>
 
-          <div class="col-9">
-            <main class="bg-white">
-              {% block main %}{% endblock main %}
-            </main>
-          </div>
+        <div>
+          {% block messages %}
+            {% include "_messages.html" %}
+          {% endblock messages %}
+          {% if not messages %}
+            {% block beforemain %}{% endblock beforemain %}
+          {% endif %}
+          <main style="width: 1037px; margin-left: 16px; margin-right: 16px">
+            {% block main %}{% endblock main %}
+          </main>
         </div>
       </div>
 
-      {% block messages %}
-        {% include "_messages.html" %}
-      {% endblock messages %}
-
       {% block script %}
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
       {% endblock script %}
     {% endblock body %}
   </body>
