--- a/templates/likes/_for_answer.html
+++ b/templates/likes/_for_answer.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% load question_answers %}
 {% load i18n %}
 {% load likes %}
@@ -8,14 +9,14 @@
       class="btn btn-{% if not answer|liked_by_me:request.user %}outline-{% endif %}success
       {% if answer.question|is_voted_for_question:request.user %}disabled" aria-disabled="true"{% endif %}
   >
-    <i class="bi bi-hand-thumbs-up-fill"></i> {% trans 'Like' %}
+    <img height="33" alt="like" src="{% static 'icons/like.png' %}" /> {% trans 'Like' %}
   </a>
   <a
       href="{% url 'likes:dislike' country_id=answer.question.country_id answer_id=answer.id %}"
       class="btn btn-{% if not answer|disliked_by_me:request.user %}outline-{% endif %}danger
       {% if answer.question|is_voted_for_question:request.user %}disabled" aria-disabled="true"{% endif %}
   >
-    <i class="bi bi-hand-thumbs-down-fill"></i> {% trans 'Dislike' %}
+    <img height="33" alt="dislike" src="{% static 'icons/dislike.png' %}" />  {% trans 'Dislike' %}
   </a>
 {% endif %}
 
