--- a/templates/questions/create.html
+++ b/templates/questions/create.html
@@ -3,10 +3,13 @@
 {% load crispy_forms_tags %}
 
 {% block title %}{% trans "Create question" %}{% endblock title %}
-{% block main %}
+{% block beforemain %}
   {{ block.super }}
   {% include '_countries.html' with url_name='questions:index' %}
-  <form method="POST" action="{% url 'questions:create' country_id=request.resolver_match.kwargs.country_id %}">
+{% endblock beforemain %}
+{% block main %}
+  {{ block.super }}
+  <form method="POST" class="bg-white" action="{% url 'questions:create' country_id=request.resolver_match.kwargs.country_id %}">
     {% csrf_token %}
     {{ form|crispy }}
     <input type="submit" class="btn btn-primary" value="{% trans 'Create Question' %}">
