--- a/templates/questions/list.html
+++ b/templates/questions/list.html
@@ -3,8 +3,11 @@
 {% load crispy_forms_tags %}
 
 {% block title %}{% trans "Questions" %}{% endblock title %}
-{% block main %}
+{% block beforemain %}
   {{ block.super }}
   {% include '_countries.html' with url_name='questions:index' %}
+{% endblock beforemain %}
+{% block main %}
+  {{ block.super }}
   {% include 'questions/_questions_list.html' with questions=object_list %}
 {% endblock main %}
