--- a/templates/users/me.html
+++ b/templates/users/me.html
@@ -5,14 +5,16 @@
 {% block title %}{% trans "Avatar" %}{% endblock title %}
 {% block main %}
   {{ block.super }}
+  <div class="bg-white">
   {% if request.user.avatar %}
     <img class="rounded-circle w-100" alt="{% trans 'Avatar' %}" src="{{ request.user.avatar.url }}" />
   {% else %}
-    <i class="bi bi-person-circle ms-5"></i>
+    <i class="bi bi-person-circle ms-5" style="line-height: 33px"></i>
   {% endif %}
 	<form enctype="multipart/form-data" method="POST" action="{% url 'users:me' %}">
     {% csrf_token %}
     {{ form|crispy }}
     <button type="submit" class="btn btn-primary">{% trans 'Change avatar' %}</button>
   </form>
+  </div>
 {% endblock main %}
