--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -1,21 +1,21 @@
 {% load static %}
 {% load i18n %}
 
-<div class="bg-white fixed-top d-flex justify-content-between align-items-center" style="font-size: 12px; height: 83px; border-bottom: 3px solid #757575">
+<div class="bg-white fixed-top d-flex align-items-center" style="font-size: 16px; height: 83px; border-bottom: 2px solid #757575">
   {% block topbar %}
     {% block site_brand %}<a style="height: 80px" href="{% url 'index' %}">
       <img height="80px" src="{% static 'logo.png' %}" alt="{% trans 'Logo' %}">
     </a>{% endblock site_brand %}
 
-    <form style="justify-self: center; position: relative">
+    <form style="margin-left: 172px; position: relative">
       <input class="border-0" type="search" placeholder="{% trans 'Search' %}"
-             style="background: #F4F4F7; color: #9C9A9C;height: 35px; width: 578px; border-radius: 10px; padding-left: 16px"
+             style="font-size: 19px; background: #F4F4F7; color: #9C9A9C;height: 35px; width: 578px; border-radius: 10px; padding-left: 16px"
              aria-label="{% trans 'Search' %}">
       <i class="bi bi-search" style="position: absolute; right: 16px; top: 8.5px; color: #9C9A9C"></i>
     </form>
 
     {% block account_bar %}
-      <div class="d-flex">
+      <div class="d-flex ms-auto">
         {% if request.user.is_authenticated %}
           <a class="d-flex" style="gap: 14px; text-decoration: none; line-height: 35px; color: black; margin-right: 14px"
               href="{% url 'users:me' %}">
