--- a/templates/_sidebar.html
+++ b/templates/_sidebar.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<ul class="nav flex-column nav-pills" style="font-size: 12px; line-height: 12px; --bs-nav-link-padding-y: 3.5px; --bs-nav-pills-link-active-bg: #F4F4F6; margin: 0 16px 40px;">
+<ul class="nav flex-column nav-pills" style="font-size: 16px; line-height: 12px; --bs-nav-link-padding-y: 3.5px; --bs-nav-pills-link-active-bg: #F4F4F6; margin: 0 16px 40px;">
   {% for href, name in MENU_ITEMS %}
     <li><a href="{{ href }}" class="d-flex align-items-center nav-link {% if request|is_current_url:href %}active{% endif %}" style="color: black; height: 43px">
       {{ name }}
@@ -11,7 +11,7 @@
     </a></li>
 </ul>
 
-<ul class="nav flex-column nav-pills" style="--bs-nav-link-padding-y: 3.5px; --bs-nav-pills-link-active-bg: #F4F4F6; margin: 0 16px; color: black">
+<ul class="nav flex-column nav-pills" style="font-size: 19px; --bs-nav-link-padding-y: 3.5px; --bs-nav-pills-link-active-bg: #F4F4F6; margin: 0 16px; color: black">
   {% for country in countries_with_questions %}
     <li>
       <a
