--- a/templates/answers/list.html
+++ b/templates/answers/list.html
@@ -17,11 +17,11 @@
   {% if question %}
     {# TODO: Split with sub templates #}
     <div style="border-bottom: 1px solid #636364; padding: 0 32px 15px 69px;">
-      <header style="margin-bottom: 15px; font-size: 24px; line-height: 24px">{{ question.truncated_en_text }}</header>
-      <span style="margin-bottom: 15px; font-size: 18px; line-height: 18px">{{ question.en_text }}</span>
+      <header style="margin-bottom: 15px; font-size: 32px; line-height: 24px">{{ question.truncated_en_text }}</header>
+      <span style="margin-bottom: 15px; font-size: 19px; line-height: 18px">{{ question.en_text }}</span>
     </div>
 
-    <div class="d-flex align-items-center" style="height: 50px; gap: 14px; margin: 0 32px 0 17px;">
+    <div class="d-flex align-items-center" style="font-size: 20px; height: 50px; gap: 14px; margin: 0 32px 0 17px;">
       <a href="{% url 'likes:toggle_subscription' country_id=question.country_id question_id=question.id %}">
         <img height="33" alt="toggle subscription" src="
           {% if question|subscribed:request.user %}
